crates/hwp-core/src/snapshots/hwp_core__snapshot_tests__sample_5017_markdown.snap
---
source: crates/hwp-core/src/lib.rs
expression: markdown
---
# HWP 문서

**버전**: 5.00.01.07

한글 2005 예제 파일입니다.

*[컨트롤: secd]*

*[단 정의]*
머리말입니다
본문 내용입니다. 본 문서는 글 워드 프로세서의 파일 저장 형식 중, 글 2002 이후 제품에서 사용되는 글 문서 파일 형식 5.0 및 글 97 문서 파일 형식, HWPML에 관하여 설명한다.
표표끝


| A0 | B0 |
|---|---|
| A1 | B10 B11 |



| table2 |
|---|


| A0 |   |
|---|---|
|   |   |

다음 문단
본 문서는 먼저 글 문서 파일 형식 5.0에 관하여 설명한 후, 글 97 문서 파일 형식, HWPML에 관하여 설명한다. 각 형식에 대한 설명은 문서 파일 형식 내의 주요한 자료 형식 및 파일 구조, 레코드 구조에 대해서 설명한다.
**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
미주입니다.
이건 각주이지요.
---

다음 페이지

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
