crates/hwp-core/src/snapshots/hwp_core__snapshot_tests__sample_5017_pics_markdown.snap
---
source: crates/hwp-core/src/lib.rs
expression: markdown
---
# HWP 문서

**버전**: 5.00.01.07

글자취급

*[컨트롤: secd]*

*[단 정의]*

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
---

어울림 (양쪽 본문)

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림
---

어울림 (왼쪽 본문)

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림
---

어울림 (오른쪽 본문)

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림
---

자리차지 (왼쪽정렬)

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
---

자리차지 (오른쪽정렬)

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
---

자리차지 (가운데정렬)

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
---

자리차지 (안쪽정렬)

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
---

자리차지 (바깥쪽정렬)

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
---

글뒤로

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
---

글 앞으로

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
