crates/hwp-core/src/snapshots/hwp_core__snapshot_tests__shapecontainer_2_markdown.snap
---
source: crates/hwp-core/src/lib.rs
expression: markdown
---
# HWP 문서

**버전**: 5.00.01.07

*[컨트롤: secd]*

*[단 정의]*

**그리기 개체**

*[개체 내용은 추출되지 않았습니다]*
