crates/hwp-core/src/snapshots/hwp_core__snapshot_tests__table_caption_markdown.snap
---
source: crates/hwp-core/src/lib.rs
expression: markdown
---
# HWP 문서



**버전**: 5.00.01.07




|   |
|---|
  
표  위 캡션


|   |
|---|
  
표  아래 캡션


|   |
|---|
  
표  왼쪽


|   |
|---|
  
표  오른쪽


|   |
|---|
  
표  왼쪽 위


|   |
|---|
  
표  오른쪽 아래


|   |
|---|
  
표  여백까지 확대

------------------------------------------


|   |
|---|
  
표  한 줄로 입력

------------------------------------------
