crates/hwp-core/src/snapshots/hwp_core__snapshot_tests__table_position_markdown.snap
---
source: crates/hwp-core/src/lib.rs
expression: markdown
---
# HWP 문서



**버전**: 5.00.01.07



표  여백 0mm, 글자처럼 취급  

|   |   |
|---|---|
|   |   |
  
전후

---



표  여백 10mm, 문단 왼쪽부터 5mm  

|   |   |
|---|---|
|   |   |


표  여백 10mm, 문단 왼쪽부터 5mm  

|   |   |
|---|---|
|   |   |


표  여백 10mm, 문단 왼쪽부터 5mm  

|   |   |
|---|---|
|   |   |


표  여백 10mm, 문단 왼쪽부터 5mm  

|   |   |
|---|---|
|   |   |


---



표  여백 10mm, 문단 왼쪽부터 5mm  

|   |   |
|---|---|
|   |   |


표  여백 10mm, 문단 왼쪽부터 5mm  

|   |   |
|---|---|
|   |   |


표  여백 10mm, 문단 왼쪽부터 5mm  

|   |   |
|---|---|
|   |   |


표  여백 10mm, 문단 왼쪽부터 5mm  

|   |   |
|---|---|
|   |   |


---



표  여백 10mm, 문단 왼쪽부터 5mm  

|   |   |
|---|---|
|   |   |


표  여백 10mm, 문단 왼쪽부터 5mm  

|   |   |
|---|---|
|   |   |


표  여백 10mm, 문단 왼쪽부터 5mm  

|   |   |
|---|---|
|   |   |


표  여백 10mm, 문단 왼쪽부터 5mm  

|   |   |
|---|---|
|   |   |
